src/objects/ErrorLog__c.object
<CustomObject>
    <description>Used for Exception handling</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Used to store a short message</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Used to store ID</description>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <description>Used to store method names</description>
        <label>MethodName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>Used to trace stack.</description>
        <label>StackTrace</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default its false</description>
        <label>isResolved</label>
        <type>Checkbox</type>
    </fields>
    <label>ErrorLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>ID__c</columns>
        <columns>MethodName__c</columns>
        <columns>StackTrace__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ErrorLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>